--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
             </plugin>
         </plugins>
         <resources>
+
             <resource>
                 <directory>src/main/resources/static</directory>
                 <filtering>true</filtering>
@@ -96,11 +97,28 @@
                     <include>**/version.txt</include>
                 </includes>
             </resource>
+
+            <resource>
+                <directory>src/main/resources/</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/application.properties</include>
+                </includes>
+            </resource>
+
             <resource>
                 <directory>src/main/resources/static</directory>
                 <filtering>false</filtering>
                 <excludes>
                     <exclude>**/version.txt</exclude>
+                </excludes>
+            </resource>
+
+            <resource>
+                <directory>src/main/resources/</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/application.properties</exclude>
                 </excludes>
             </resource>
         </resources>
